Fix: Div block handles should drop down when invisible op top [ED-17976]

--- a/assets/dev/scss/editor/preview/_section.scss
+++ b/assets/dev/scss/editor/preview/_section.scss
@@ -82,7 +82,8 @@
 
 // Top Section / Container (Handles inside)
 .e-handles-inside,
-.elementor-section--handles-inside {
+.elementor-section--handles-inside,
+.elementor-edit-mode [data-element_type]:first-child {
 
 	> .elementor-element-overlay > .elementor-editor-element-settings {
 		transform: translateX(-50%);
